# glock

./: Application.cpp  CMakeLists.txt  README.md  jarvis  makefile  makefile~
Glock/: CMakeLists.txt  Decimal.cpp  Integer.h  String.cpp
include/: Glock.h  String.h
src/: Application.cpp  Application.cpp~  Console.cpp  Console.h  Decimal.cpp  Decimal.cpp~  Decimal.h  Integer.cpp  Integer.h  Scanner.cpp  Scanner.h  String.cpp  String.h
